# sequencer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
app/: Clock.h  EngineModel.cpp  EngineModel.h  PadModel.cpp  PadModel.h  Piano.h  include.h  main.cpp  main.h
res/: qml.qrc  qtquickcontrols2.conf
res/ui/: home.ui.qml  list.ui.qml  main.ui.qml
res/wav/: README.md
